Fix warnings about new Integer(..)